--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </div>
     </section>
 
-    <div>
+    <aside>
       <div id="ads">
         <img src="assets/Ads.png" alt="">
       </div>
@@ -235,7 +235,7 @@
             <div>
               <span class="content-tag">Software</span>
               <h3 class="text-xl">
-                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e prom...
+                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológic...
               </h3>
             </div>
           </article>
@@ -259,7 +259,7 @@
             <div>
               <span class="content-tag">Criptomoedas</span>
               <h3 class="text-xl">
-                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar...
               </h3>
             </div>
           </article>
@@ -271,7 +271,7 @@
             <div>
               <span class="content-tag">drones</span>
               <h3 class="text-xl">
-                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
+                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando...
               </h3>
             </div>
           </article>
@@ -289,7 +289,7 @@
           </article>
         </div>
       </section>
-    </div>
+    </aside>
   </main>
 
 </body>
